Version 1.7.3:
  - Changed: Moved feeding data to train method in the Python interface.
  - Fixed: Sparse matrix reader made more robust.

Version 1.7.2: 2016-11-24
  - New: The coefficient of the Gaussian neighborhood function exp(-||x-y||^2/(2*(coeff*radius)^2)) is now exposed in all interfaces as a parameter.
  - New: `get_bmu` function in the Python interface to get the best matching units given an activation map.
  - Changed: Updated PCA initialization in the Python interface to work with `sk-learn` 0.18 onwards.
  - Changed: Radii can be float values.
  - Fixed: Only positive values were written back to codebook during update.
  - Fixed: Sparse data is read correctly when there are class labels.

Version 1.7.1: 2016-10-02
  - Fixed: macOS build works again.

Version 1.7.0: 2016-09-30
  - New: Julia interface is available (https://github.com/peterwittek/Somoclu.jl).
  - New: Method `get_surface_state` of the `Somoclu` object in Python calculates the activation map for all data instances.
  - New: Method `view_activation_map` of the `Somoclu` object in Python allows plotting the activation map for the training data instances or for a new data instance.
  - New: Method `view_similarity_matrix` of the `Somoclu` object in Python visualizes the similarity matrix of data points according to their distance to the nodes in the map.
  - Fixed: CRAN-friendliness improved.

Version 1.6.2: 2016-08-09
  - Changed: In-place codebook updates when compiled without MPI. This improves update speed and substantially cuts memory use.
  - Changed: Compatible with Visual Studio 15.
  - Fixed: The BMUs returned after training were from before the last epoch. Now another round of BMU search is done.
  - Fixed: Training can continue on the same data in the Python wrapper.
  - Fixed: GPU memory allocation problem on Windows.

Version 1.6.1: 2016-02-22
  - New: Option for PCA initialization is added to the Python interface.