@@ -14,10 +14,12 @@ gridType = 'rectangular';
 compactSupport = false;
 neighborhood = 'gaussian';
 stdCoeff = 0.5;
+verbose = 0;
 [sMap, sTrain, globalBmus, uMatrix] = somoclu_train(sMap, D, 'msize', msize, 'radius0', radius0, ...
     'radiusN', radiusN, 'radiusCooling', radiusCooling, ...
     'scale0', scale0, 'scaleN', scaleN, 'scaleCooling', scaleCooling, ...
     'kernelType', kernelType, 'mapType', mapType, ...
     'gridType', gridType, 'compactSupport', compactSupport, ...
-    'neighborhood', neighborhood, 'stdCoeff', stdCoeff, 'nEpoch', nEpoch);
+    'neighborhood', neighborhood, 'stdCoeff', stdCoeff, 'nEpoch', nEpoch, ...
+    'verbose', verbose);
     
