@@ -13,10 +13,11 @@ mapType = 'planar';
 gridType = 'square';
 compactSupport = false;
 stdCoeff = 0.5;
+verbose = 0;
 [sMap, sTrain, globalBmus, uMatrix] = somoclu_train(sMap, D, 'msize', msize, 'radius0', radius0, ...
     'radiusN', radiusN, 'radiusCooling', radiusCooling, ...
     'scale0', scale0, 'scaleN', scaleN, 'scaleCooling', scaleCooling, ...
     'kernelType', kernelType, 'mapType', mapType, ...
     'gridType', gridType, 'compactSupport', compactSupport, ...
-    'stdCoeff', stdCoeff, 'nEpoch', nEpoch);
+    'stdCoeff', stdCoeff, 'nEpoch', nEpoch, 'verbose', verbose);
     
